src/antlr-trig/TRIGParser.js
// Generated from TRIG.g4 by ANTLR 4.13.1
// jshint ignore: start
import antlr4 from 'antlr4';
import TRIGListener from './TRIGListener.js';


const atn = new antlr4.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.DFA(ds, index) );

const sharedContextCache = new antlr4.PredictionContextCache();

export default class TRIGParser extends antlr4.Parser {

    static grammarFileName = "TRIG.g4";
    static literalNames = [ null, "'GRAPH'", "'.'", "'{'", "'}'", "'@prefix'", 
                            "'@base'", "'BASE'", "'PREFIX'", "';'", "','", 
                            "'a'", "'['", "']'", "'('", "')'", "'^^'" ];
    static symbolicNames = [ null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, "Macro", "NumericLiteral", "Comment", 
                             "BooleanLiteral", "String", "BlankNode", "WS", 
                             "PN_PREFIX", "IRIREF", "PNAME_NS", "MACRO_VAL", 
                             "PNAME_LN", "BLANK_NODE_LABEL", "LANGTAG", 
                             "INTEGER", "DECIMAL", "DOUBLE", "EXPONENT", 
                             "STRING_LITERAL_LONG_SINGLE_QUOTE", "STRING_LITERAL_LONG_QUOTE", 
                             "STRING_LITERAL_QUOTE", "STRING_LITERAL_SINGLE_QUOTE", 
                             "UCHAR", "ECHAR", "ANON_WS", "ANON", "PN_CHARS_BASE", 
                             "PN_CHARS_U", "PN_CHARS", "PN_LOCAL", "PLX", 
                             "PERCENT", "HEX", "PN_LOCAL_ESC" ];
    static ruleNames = [ "trigDoc", "block", "triplesOrGraph", "labelOrSubject", 
                         "macro", "wrappedGraph", "triplesBlock", "triples2", 
                         "directive", "prefixID", "base", "sparqlBase", 
                         "sparqlPrefix", "triples", "predicateObjectList", 
                         "objectList", "verb", "subject", "predicate", "object", 
                         "literal", "blankNodePropertyList", "collection", 
                         "rdfLiteral", "iri", "prefixedname" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = TRIGParser.ruleNames;
        this.literalNames = TRIGParser.literalNames;
        this.symbolicNames = TRIGParser.symbolicNames;
    }



	trigDoc() {
	    let localctx = new TrigDocContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, TRIGParser.RULE_trigDoc);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 57;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while((((_la) & ~0x1f) === 0 && ((1 << _la) & 373445098) !== 0)) {
	            this.state = 55;
	            this._errHandler.sync(this);
	            switch(this._input.LA(1)) {
	            case 5:
	            case 6:
	            case 7:
	            case 8:
	                this.state = 52;
	                this.directive();
	                break;
	            case 1:
	            case 3:
	            case 12:
	            case 14:
	            case 22:
	            case 25:
	            case 26:
	            case 28:
	                this.state = 53;
	                this.block();
	                break;
	            case 17:
	                this.state = 54;
	                this.macro();
	                break;
	            default:
	                throw new antlr4.NoViableAltException(this);
	            }
	            this.state = 59;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	block() {
	    let localctx = new BlockContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, TRIGParser.RULE_block);
	    try {
	        this.state = 67;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 22:
	        case 25:
	        case 26:
	        case 28:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 60;
	            this.triplesOrGraph();
	            break;
	        case 3:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 61;
	            this.wrappedGraph();
	            break;
	        case 12:
	        case 14:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 62;
	            this.triples2();
	            break;
	        case 1:
	            this.enterOuterAlt(localctx, 4);
	            this.state = 63;
	            this.match(TRIGParser.T__0);
	            this.state = 64;
	            this.labelOrSubject();
	            this.state = 65;
	            this.wrappedGraph();
	            break;
	        default:
	            throw new antlr4.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	triplesOrGraph() {
	    let localctx = new TriplesOrGraphContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, TRIGParser.RULE_triplesOrGraph);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 69;
	        this.labelOrSubject();
	        this.state = 74;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 3:
	            this.state = 70;
	            this.wrappedGraph();
	            break;
	        case 11:
	        case 25:
	        case 26:
	        case 28:
	            this.state = 71;
	            this.predicateObjectList();
	            this.state = 72;
	            this.match(TRIGParser.T__1);
	            break;
	        default:
	            throw new antlr4.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	labelOrSubject() {
	    let localctx = new LabelOrSubjectContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, TRIGParser.RULE_labelOrSubject);
	    try {
	        this.state = 78;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 25:
	        case 26:
	        case 28:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 76;
	            this.iri();
	            break;
	        case 22:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 77;
	            this.match(TRIGParser.BlankNode);
	            break;
	        default:
	            throw new antlr4.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	macro() {
	    let localctx = new MacroContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, TRIGParser.RULE_macro);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 80;
	        this.match(TRIGParser.Macro);
	    } catch (re) {
	    	if(re instanceof antlr4.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	wrappedGraph() {
	    let localctx = new WrappedGraphContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 10, TRIGParser.RULE_wrappedGraph);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 82;
	        this.match(TRIGParser.T__2);
	        this.state = 84;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if((((_la) & ~0x1f) === 0 && ((1 << _la) & 373313536) !== 0)) {
	            this.state = 83;
	            this.triplesBlock();
	        }

	        this.state = 86;
	        this.match(TRIGParser.T__3);
	    } catch (re) {
	    	if(re instanceof antlr4.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	triplesBlock() {
	    let localctx = new TriplesBlockContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 12, TRIGParser.RULE_triplesBlock);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 88;
	        this.triples();
	        this.state = 93;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===2) {
	            this.state = 89;
	            this.match(TRIGParser.T__1);
	            this.state = 91;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if((((_la) & ~0x1f) === 0 && ((1 << _la) & 373313536) !== 0)) {
	                this.state = 90;
	                this.triplesBlock();
	            }

	        }

	    } catch (re) {
	    	if(re instanceof antlr4.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	triples2() {
	    let localctx = new Triples2Context(this, this._ctx, this.state);
	    this.enterRule(localctx, 14, TRIGParser.RULE_triples2);
	    var _la = 0;
	    try {
	        this.state = 105;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 12:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 95;
	            this.blankNodePropertyList();
	            this.state = 97;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if((((_la) & ~0x1f) === 0 && ((1 << _la) & 369100800) !== 0)) {
	                this.state = 96;
	                this.predicateObjectList();
	            }

	            this.state = 99;
	            this.match(TRIGParser.T__1);
	            break;
	        case 14:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 101;
	            this.collection();
	            this.state = 102;
	            this.predicateObjectList();
	            this.state = 103;
	            this.match(TRIGParser.T__1);
	            break;
	        default:
	            throw new antlr4.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	directive() {
	    let localctx = new DirectiveContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 16, TRIGParser.RULE_directive);
	    try {
	        this.state = 111;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 5:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 107;
	            this.prefixID();
	            break;
	        case 6:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 108;
	            this.base();
	            break;
	        case 8:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 109;
	            this.sparqlPrefix();
	            break;
	        case 7:
	            this.enterOuterAlt(localctx, 4);
	            this.state = 110;
	            this.sparqlBase();
	            break;
	        default:
	            throw new antlr4.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	prefixID() {
	    let localctx = new PrefixIDContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 18, TRIGParser.RULE_prefixID);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 113;
	        this.match(TRIGParser.T__4);
	        this.state = 114;
	        this.match(TRIGParser.PNAME_NS);
	        this.state = 115;
	        this.match(TRIGParser.IRIREF);
	        this.state = 116;
	        this.match(TRIGParser.T__1);
	    } catch (re) {
	    	if(re instanceof antlr4.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	base() {
	    let localctx = new BaseContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 20, TRIGParser.RULE_base);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 118;
	        this.match(TRIGParser.T__5);
	        this.state = 119;
	        this.match(TRIGParser.IRIREF);
	        this.state = 120;
	        this.match(TRIGParser.T__1);
	    } catch (re) {
	    	if(re instanceof antlr4.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	sparqlBase() {
	    let localctx = new SparqlBaseContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 22, TRIGParser.RULE_sparqlBase);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 122;
	        this.match(TRIGParser.T__6);
	        this.state = 123;
	        this.match(TRIGParser.IRIREF);
	    } catch (re) {
	    	if(re instanceof antlr4.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	sparqlPrefix() {
	    let localctx = new SparqlPrefixContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 24, TRIGParser.RULE_sparqlPrefix);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 125;
	        this.match(TRIGParser.T__7);
	        this.state = 126;
	        this.match(TRIGParser.PNAME_NS);
	        this.state = 127;
	        this.match(TRIGParser.IRIREF);
	    } catch (re) {
	    	if(re instanceof antlr4.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	triples() {
	    let localctx = new TriplesContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 26, TRIGParser.RULE_triples);
	    var _la = 0;
	    try {
	        this.state = 136;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 14:
	        case 22:
	        case 25:
	        case 26:
	        case 28:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 129;
	            this.subject();
	            this.state = 130;
	            this.predicateObjectList();
	            break;
	        case 12:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 132;
	            this.blankNodePropertyList();
	            this.state = 134;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if((((_la) & ~0x1f) === 0 && ((1 << _la) & 369100800) !== 0)) {
	                this.state = 133;
	                this.predicateObjectList();
	            }

	            break;
	        default:
	            throw new antlr4.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	predicateObjectList() {
	    let localctx = new PredicateObjectListContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 28, TRIGParser.RULE_predicateObjectList);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 138;
	        this.verb();
	        this.state = 139;
	        this.objectList();
	        this.state = 148;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===9) {
	            this.state = 140;
	            this.match(TRIGParser.T__8);
	            this.state = 144;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if((((_la) & ~0x1f) === 0 && ((1 << _la) & 369100800) !== 0)) {
	                this.state = 141;
	                this.verb();
	                this.state = 142;
	                this.objectList();
	            }

	            this.state = 150;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	objectList() {
	    let localctx = new ObjectListContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 30, TRIGParser.RULE_objectList);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 151;
	        this.object();
	        this.state = 156;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===10) {
	            this.state = 152;
	            this.match(TRIGParser.T__9);
	            this.state = 153;
	            this.object();
	            this.state = 158;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	verb() {
	    let localctx = new VerbContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 32, TRIGParser.RULE_verb);
	    try {
	        this.state = 161;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 25:
	        case 26:
	        case 28:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 159;
	            this.predicate();
	            break;
	        case 11:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 160;
	            this.match(TRIGParser.T__10);
	            break;
	        default:
	            throw new antlr4.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	subject() {
	    let localctx = new SubjectContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 34, TRIGParser.RULE_subject);
	    try {
	        this.state = 166;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 25:
	        case 26:
	        case 28:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 163;
	            this.iri();
	            break;
	        case 22:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 164;
	            this.match(TRIGParser.BlankNode);
	            break;
	        case 14:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 165;
	            this.collection();
	            break;
	        default:
	            throw new antlr4.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	predicate() {
	    let localctx = new PredicateContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 36, TRIGParser.RULE_predicate);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 168;
	        this.iri();
	    } catch (re) {
	    	if(re instanceof antlr4.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	object() {
	    let localctx = new ObjectContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 38, TRIGParser.RULE_object);
	    try {
	        this.state = 175;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 25:
	        case 26:
	        case 28:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 170;
	            this.iri();
	            break;
	        case 22:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 171;
	            this.match(TRIGParser.BlankNode);
	            break;
	        case 14:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 172;
	            this.collection();
	            break;
	        case 12:
	            this.enterOuterAlt(localctx, 4);
	            this.state = 173;
	            this.blankNodePropertyList();
	            break;
	        case 18:
	        case 20:
	        case 21:
	            this.enterOuterAlt(localctx, 5);
	            this.state = 174;
	            this.literal();
	            break;
	        default:
	            throw new antlr4.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	literal() {
	    let localctx = new LiteralContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 40, TRIGParser.RULE_literal);
	    try {
	        this.state = 180;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 21:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 177;
	            this.rdfLiteral();
	            break;
	        case 18:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 178;
	            this.match(TRIGParser.NumericLiteral);
	            break;
	        case 20:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 179;
	            this.match(TRIGParser.BooleanLiteral);
	            break;
	        default:
	            throw new antlr4.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	blankNodePropertyList() {
	    let localctx = new BlankNodePropertyListContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 42, TRIGParser.RULE_blankNodePropertyList);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 182;
	        this.match(TRIGParser.T__11);
	        this.state = 183;
	        this.predicateObjectList();
	        this.state = 184;
	        this.match(TRIGParser.T__12);
	    } catch (re) {
	    	if(re instanceof antlr4.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	collection() {
	    let localctx = new CollectionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 44, TRIGParser.RULE_collection);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 186;
	        this.match(TRIGParser.T__13);
	        this.state = 190;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while((((_la) & ~0x1f) === 0 && ((1 << _la) & 376721408) !== 0)) {
	            this.state = 187;
	            this.object();
	            this.state = 192;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 193;
	        this.match(TRIGParser.T__14);
	    } catch (re) {
	    	if(re instanceof antlr4.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


